phone benefits text too long - fixed

--- a/src/components/Hero/_Hero.scss
+++ b/src/components/Hero/_Hero.scss
@@ -58,7 +58,7 @@
     }
 
     &__benefits {
-      font-size: 1.8em;
+      font-size: 1.5em;
       font-weight: 300;
 
       margin-bottom: 3rem;
